exports[`describeReact should describe a stateless function component 1`] = `
Object {
  "description": "",
  "methods": Array [],
}
`;

exports[`describeReact should describe an ES5 component 1`] = `
Object {
  "description": "",
  "methods": Array [
    Object {
      "docblock": null,
      "modifiers": Array [],
      "name": "_setup",
      "params": Array [],
      "returns": null,
    },
    Object {
      "docblock": null,
      "modifiers": Array [],
      "name": "show",
      "params": Array [],
      "returns": null,
    },
  ],
  "props": Object {
    "disabled": Object {
      "description": "",
      "required": false,
      "type": Object {
        "name": "bool",
      },
    },
    "height": Object {
      "description": "",
      "required": false,
      "type": Object {
        "name": "number",
      },
    },
    "label": Object {
      "description": "",
      "required": false,
      "type": Object {
        "name": "string",
      },
    },
    "level": Object {
      "description": "",
      "required": false,
      "type": Object {
        "name": "enum",
        "value": Array [
          Object {
            "computed": false,
            "value": "\'primary\'",
          },
          Object {
            "computed": false,
            "value": "\'secondary\'",
          },
          Object {
            "computed": false,
            "value": "\'tertiary\'",
          },
          Object {
            "computed": false,
            "value": "\'quaternary\'",
          },
          Object {
            "computed": false,
            "value": "\'text\'",
          },
          Object {
            "computed": false,
            "value": "\'icon\'",
          },
        ],
      },
    },
  },
}
`;

exports[`describeReact should describe an ES6 component 1`] = `
Object {
  "description": "",
  "methods": Array [],
  "props": Object {
    "children": Object {
      "description": "",
      "required": true,
      "type": Object {
        "name": "element",
      },
    },
    "disabled": Object {
      "description": "",
      "required": false,
      "type": Object {
        "name": "bool",
      },
    },
    "height": Object {
      "description": "",
      "required": false,
      "type": Object {
        "name": "number",
      },
    },
    "label": Object {
      "description": "",
      "required": false,
      "type": Object {
        "name": "string",
      },
    },
    "level": Object {
      "description": "",
      "required": false,
      "type": Object {
        "name": "enum",
        "value": Array [
          Object {
            "computed": false,
            "value": "\'primary\'",
          },
          Object {
            "computed": false,
            "value": "\'secondary\'",
          },
          Object {
            "computed": false,
            "value": "\'tertiary\'",
          },
          Object {
            "computed": false,
            "value": "\'quaternary\'",
          },
          Object {
            "computed": false,
            "value": "\'text\'",
          },
          Object {
            "computed": false,
            "value": "\'icon\'",
          },
        ],
      },
    },
  },
}
`;

exports[`describeReact should describe an ES6 with Flow component 1`] = `
Object {
  "description": "",
  "methods": Array [],
  "props": Object {
    "children": Object {
      "description": "",
      "flowType": Object {
        "name": "any",
      },
      "required": true,
    },
    "disabled": Object {
      "description": "",
      "flowType": Object {
        "name": "boolean",
      },
      "required": false,
    },
    "label": Object {
      "description": "",
      "flowType": Object {
        "name": "string",
      },
      "required": true,
    },
  },
}
`;

exports[`describeReact should describe an unsafe ES6 component 1`] = `
Object {
  "description": "",
  "methods": Array [],
  "props": Object {
    "foo": Object {
      "description": "",
      "required": true,
      "type": Object {
        "name": "instanceOf",
        "value": "React",
      },
    },
  },
}
`;
